# ppml-1d-tm-verify

./: .dockerignore  .gitattributes  .gitignore  BENCHMARK.md  CHANGELOG.md  CORPUS_CHANGELOG.md  Dockerfile  LICENSE  NAME_MAP.md  ORIGINAL_CODE_FINDINGS.md  README.md  THIRD_PARTY_NOTICES.md  VERIFICATION_NOTES.md  base_fx.m  cell2mat_struct.m  engine_string.m  generate_fixtures.m  id_category.m  isfield_true.m  order_metrics.m  pyproject.toml  redheffer_cond_1d_tm.m  report.html  requirements.txt  run_reference.m  save_v7.m  sha256_file.m  ternary.m  verify.bat  verify.sh
bench/: bench_matlab.m  benchmark.py
docs/: methodology.md
fixtures/: branch_B1_L0_bare.mat  branch_B2_halfnpw0_TMM.mat  branch_B2b_halfnpw1.mat  branch_B3_normal_incidence.mat  branch_B4_lossless_energy.mat  branch_SM_dielectric.mat  branch_SM_unitary_singleorder.mat  branch_epssup_gt1_metal_sub.mat  branch_field_maps.mat  branch_multiorder.mat  branch_singleorder_subwl.mat  branch_thick_metal_Smatrix.mat  branch_wood_anomaly_+0.00.mat  branch_wood_anomaly_+0.15.mat  branch_wood_anomaly_-0.50.mat  manifest.json  out_of_domain_epssup_complex_RTA.mat  out_of_domain_epssup_complex_SM.mat  out_of_domain_epssup_complex_field.mat  rand_001.mat  rand_002.mat  rand_003.mat  rand_004.mat  rand_005.mat  rand_006.mat  rand_007.mat  rand_008.mat  rand_009.mat  rand_010.mat  rand_011.mat  rand_012.mat  rand_013.mat  rand_014.mat  rand_015.mat  rand_016.mat  rand_017.mat  rand_018.mat  rand_019.mat  rand_020.mat  rand_021.mat  (+210 more)
notebooks/: quickstart.ipynb
tests/: test_port_vs_golden.py  (+1 more)
verify/: compare.py  (+4 more)
(+506 files in other folders)
